fix: profile image responsive on mobile

--- a/styles.css
+++ b/styles.css
@@ -453,6 +453,7 @@ small {
 	align-self: end;
 	justify-self: end;
 	width: 425px;
+	max-width: 100%;
 	box-shadow: 0px 0px 2.2px rgba(0, 0, 0, 0.006),
 		0px 0px 5.3px rgba(0, 0, 0, 0.008), 0px 0px 10px rgba(0, 0, 0, 0.01),
 		0px 0px 17.9px rgba(0, 0, 0, 0.012), 0px 0px 33.4px rgba(0, 0, 0, 0.014),
